# SiMG

./: .gitignore  landing.css  landing.html  package.json  simg.sh
desktop/: main.ts  package-lock.json  package.json  preload.ts  types.ts  webpack.config.js
desktop/dist-ts/: main.js  preload.js
desktop/dist-ts/renderer/: App.js  index.js  index.js.map
desktop/renderer/: App.tsx  bundle.js  bundle.js.map  index.html
desktop/scripts/: build_cpp.sh
fingerprint/anchor/: CMakeLists.txt  anchor.cpp  dicom_reader.cpp  phash.cpp  rings.cpp  simg_writer.cpp
fingerprint/anchor/include/: dicom_reader.h  phash.h  rings.h  simg_writer.h
fingerprint/verifier/: CMakeLists.txt  compare.cpp  simg_reader.cpp  verifier.cpp
fingerprint/verifier/include/: compare.h  simg_reader.h
inference-pipeline/: app.py  guardian_operator.py  inference_operator.py  requirements.txt
keys/: public.pem  public.pem.bak
pipeline/: converter_trigger.sh  verification_enclosure.sh  verification_sandbox_trigger.sh
pipelines/: anchor_trigger.sh  converter_trigger.sh  inference_trigger.sh
sandbox/verification-enclosure/: run.sh
website/: index.css
website-final/: index.html
